# fit-parser

./: 7427193981_ACTIVITY.fit  Cargo.toml  build.rs
.devcontainer/: Dockerfile  devcontainer.json
fit_definitions/: profile_messages.csv  profile_types.csv
fit_profile_typegen/: Cargo.toml
fit_profile_typegen/src/: lib.rs  main.rs
parser/: Cargo.toml  build.rs
parser/src/: fit_header.rs  fit_records.rs  lib.rs  main.rs
src/: main.rs
