[package]
name = "fit_profile_typegen"
version = "0.1.0"
edition = "2021"

[lib]
name = "fit_profile_typegen"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
codegen = "0.2.0"
convert_case = "0.6.0"
